[package]
name = "commands"
version = "0.0.4"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A command system for Rust. This provides a general command system which can be used in a variety of environments, including GUI applications and command line utilities. This is inspired by elements of the Lisp Machine, the Common Lisp Interface Manager (CLIM), router command line interfaces, and the TOPS-20 command line among other things."
keywords = ["argument", "cli", "command"]
categories = ["command-line-interface"]
homepage = "https://github.com/endoli/commands.rs"
repository = "https://github.com/endoli/commands.rs"
documentation = "https://endoli.github.io/commands.rs/commands/"

[badges]
travis-ci = { repository = "endoli/commands.rs" }

[[example]]
name = "linefeed"
path = "examples/linefeed/main.rs"

[[example]]
name = "readline"
path = "examples/readline/main.rs"

[[example]]
name = "rustyline"
path = "examples/rustyline/main.rs"

[dependencies]

[dev-dependencies]
linefeed = "0.2"
readline = "0.0.13"
rustyline = "1"
